# rust_vectorizer

./: Cargo.toml  README.md
src/: countvectorizer.rs  countvectorizer2.rs  lib.rs  main.rs  ndarray_extension.rs  preprocess.rs  tfidfvectorizer.rs  tfidfvectorizer2.rs  tokenizer.rs  tokenizer2.rs
src/deprecated/: countvectorizer.rs
tests/: countvectorizer_test.rs  ndarray_extension_test.rs  tfidfvectorizer_test.rs
