[package]
name = "vectorizer"
version = "0.1.0"
authors = ["Ryo <ryomarcher@gmail.com>"]
description = "A crate for vectorizing a collection of documents."


[features]
default = []
serde_support = ["serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
regex = "1.3.4"
num = "0.2.1"
ndarray = "0.13.0"
# indexmap = "1.3.2"
